--- a/museum/templates/index.html
+++ b/museum/templates/index.html
@@ -50,7 +50,7 @@ Purchase: http://themeforest.net/item/metronic-responsive-admin-dashboard-templa
 		<div class="header-inner">
 			<!-- BEGIN LOGO -->  
 			<a class="navbar-brand" href="index.html">
-			<img src="/static/assets/img/logo.png" alt="logo" class="img-responsive" />
+			<img src="/static/assets/img/logo1.png" alt="logo" class="img-responsive" />
 			</a>
 			<!-- END LOGO -->
 			<!-- BEGIN HORIZANTAL MENU -->
